clusters/myclusters/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
    - name: http  # Name for port 80
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https  # Name for port 443
      protocol: TCP
      port: 443
      targetPort: 443
