clusters/myclusters/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - beatsinthe.cloud
    secretName: my-nginx-tls
  rules:
  - host: beatsinthe.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-app
            port:
              number: 80
